--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   overflow: hidden;
   min-height: 100vh;
   cursor: crosshair;
+  position: relative;
+  
 }
 
 .bubble {
@@ -9,7 +11,8 @@ body {
   border-radius: 300px;
   background: rgba(255, 166, 0, 0.6);
   opacity: 0;
-  animation: anim 8s forwards;
+  animation: anim forwards;
+  animation-duration: 8s;
   filter: hue-rotate(0deg);
 }
 
@@ -22,9 +25,35 @@ body {
   }
 }
 
+h2{
+  text-align: center;
+}
+
 h3 {
   font-size: 10rem;
   text-align: center;
   margin-top: 20px;
   color: rgba(128, 128, 128, 0.555);
+  margin-bottom: auto;
+}
+
+.lvl{
+  display: block;
+  position: relative;
+  height: 45px;
+  width: 100px;
+  border: 1px solid rgb(255, 98, 98);
+  background: rgb(255, 98, 98);
+  border-radius: 50%;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 20px;
+  font-size: 1rem;
+  
+}
+
+div {
+  text-align: center;
+  font-size: 3rem;
 }
